Cleaning Up Unneeded Features

--- a/elements.html
+++ b/elements.html
@@ -193,43 +193,14 @@
 						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper. Suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p> 
 						<br>
 					</div>
-					<ul class="block media-gallery">
-						<li>
-							<a data-dimension="640x420" href="http://youtu.be/GgR6dyzkKHI" title="Youtube video loaded with the short URL">
-								<img alt="" src="resources/images/gallery/thumbs/01.jpg">
-								<span class="hover-element lightbox-icon"></span>
-							</a>
-						</li>
-						<li>
-							<a data-dimension="640x420" href="http://vimeo.com/7449107" title="Vimeo video">
-								<img alt="" src="resources/images/gallery/thumbs/01.jpg">
-								<span class="hover-element lightbox-icon"></span>
-							</a>
-						</li>
-						<li class="last">
-							<a data-dimension="640x420" title="Youtube video loaded with the long URL, grabed right from the address bar" href="http://www.youtube.com/watch?v=GgR6dyzkKHI">
-								<img alt="" src="resources/images/gallery/thumbs/01.jpg">
-								<span class="hover-element lightbox-icon"></span>
-							</a>
-						</li>
+					<ul class="block media-gallery-large">
 						<li>
 							<a href="resources/images/gallery/images/01.jpg">
 								<img alt="" src="resources/images/gallery/thumbs/01.jpg">
 								<span class="hover-element lightbox-icon"></span>
 							</a>
 						</li>
-						<li>
-							<a data-dimension="480x640" href="http://envato.com" title="A website loaded into an iframe">
-								<img alt="" src="resources/images/gallery/thumbs/01.jpg">
-								<span class="hover-element lightbox-icon"></span>
-							</a>
-						</li>
-						<li class="last">
-							<a href="resources/images/gallery/images/01.jpg">
-								<img alt="" src="resources/images/gallery/thumbs/01.jpg">
-								<span class="hover-element lightbox-icon"></span>
-							</a>
-						</li>
+
 					</ul>
 					<br>
 					<blockquote class="block full-width">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper. Suscipit lobortis nisl ut aliquip ex ea commodo consequat.</blockquote>
