Fixed php to work with new fields

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 							<label for="message">Any Additional Notes?*</label>
 							<textarea placeholder="Any Additional Notes?" id="message" name="message"></textarea>
 
-							<input id="site_mentee" type="text" name="contact_site_mentee">
+							<input id="site_mentee" type="text" name="contact_site">
 
 							<input id="submit" type="submit" value="Send">
 						</form>
@@ -525,7 +525,7 @@
 							<label for="message">Additional Notes?*</label>
 							<textarea placeholder="Additional Notes?" id="message" name="message"></textarea>
 
-							<input id="site_mentor" type="text" name="contact_site_mentor">
+							<input id="site_mentor" style="visibility:hidden" type="text" name="contact_site">
 
 							<input id="submit" type="submit" value="Send">
 						</form>
