Fixed bugs and wrote code for mentor form

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
 
 					<div class="block one-half last">
 						
-						<form action="form-submit.php" method="post" id="contact-form" class="contact-form-mentor">
+						<form action="form-submit.php" method="post" id="contact-form" class="contact-form">
 							
 							<label for="name">Name*</label>
 							<input placeholder="Name*" id="name" type="text" name="name">
