--- a/index.html
+++ b/index.html
@@ -71,9 +71,6 @@
 							<a href="#contacts">Signup</a>
 						</li>
 						<li>
-							<a href="#works">Meetup 101</a>
-						</li>
-						<li>
 							<a href="#">Prospective Mentor?</a>
 						</li>
 					</ul>
@@ -416,41 +413,22 @@
 
 
 
-
-		<section id="works" class="works-template" data-source="works.html">
-			<div class="section-holder">
-				<div class="heading">
-					<h1>Meetup 101</h1>
+		<div id="match_results_cover" style="visibility:hidden;">
+			<section id="works" class="works-template" data-source="works.html">
+				<div class="section-holder">
+					<div class="heading">
+						<h1>Mentors For You</h1>
+					</div>
+					<!--end heading-->
+					<div class="content" id="match_results">
+						
+					</div>
+					<!--end content-->
+					<a class="load-more" href="#more">+</a>
 				</div>
-				<!--end heading-->
-				<div class="content">
-					<ul class="works-gallery">
-						<li data-tag="graphic-design, other" data-slug="quickresponse">
-							<a class="project-thumb to-project" href="project-01.html">
-								<img src="resources/images/works/thumbs/01.jpg" alt="">
-								<span class="hover-element"></span>
-							</a>
-							<nav class="project-details">
-								<ul class="project-nav">
-									<li>
-										<a class="category" href="#graphic-design">Graphic Design</a>
-									</li>
-									<li>
-										<a class="category" href="#other">Other</a>
-									</li>
-									<li>
-										<a class="to-project" href="project-01.html">Quickresponse</a>
-									</li>
-								</ul>
-							</nav>
-						</li>
-					</ul>
-				</div>
-				<!--end content-->
-				<a class="load-more" href="#more">+</a>
-			</div>
-			<!--end section-holder-->
-		</section>
+				<!--end section-holder-->
+			</section>
+		</div>
 		<!--END WORKS-->
 
 
