Modifications to HTML/CSS

--- a/elements.html
+++ b/elements.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-<title>ilone</title>
+<title>MentorMe</title>
 <link rel="stylesheet" href="resources/css/flexslider.css" type="text/css" />
 <link rel="stylesheet" href="resources/css/style.css" type="text/css" />
 <link rel="stylesheet" href="resources/css/media-queries.css" type="text/css" media="all" />
@@ -195,12 +195,12 @@
 					</div>
 					<ul class="block media-gallery-large">
 						<li>
-							<a href="resources/images/gallery/images/01.jpg">
-								<img alt="" src="resources/images/gallery/thumbs/01.jpg">
+							<a href="resources/images/gallery/images/mentor_mentee.jpg">
+								<img alt="" src="resources/images/gallery/images/mentor_mentee.jpg">
 								<span class="hover-element lightbox-icon"></span>
 							</a>
 						</li>
-
+g
 					</ul>
 					<br>
 					<blockquote class="block full-width">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper. Suscipit lobortis nisl ut aliquip ex ea commodo consequat.</blockquote>
