--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
 
 
-		<section id="about" class=" ">
+		<section id="about" class="about-template inverse-color">
 			<div class="section-holder">
 				
 				<ul class="team-members">
@@ -477,12 +477,6 @@
 
 							<label for="message">Additional Notes?*</label>
 							<textarea placeholder="Additional Notes?" id="message" name="message"></textarea>
-
-<<<<<<< HEAD
-=======
-							<input id="site_mentor" style="visibility:hidden" type="text" name="contact_site">
-
->>>>>>> 526eedf56bed89ee393cda3e1a3a9a75a329d6ef
 							<input id="submit" type="submit" value="Send">
 						</form>
 					</div>
