--- a/index.html
+++ b/index.html
@@ -285,15 +285,7 @@
 
 
 
-
-
-
-
-
-
-
-
-		<section id="contacts" class="standart-template">
+		<section id="contacts" class="contacts-template">
 			<div class="section-holder">
 				<div class="heading">
 					<h1>Mentee Signup</h1>
@@ -346,8 +338,6 @@
 							<label for="message">Any Additional Notes?*</label>
 							<textarea placeholder="Any Additional Notes?" id="message" name="message"></textarea>
 
-							<input id="site_mentee" type="text" name="contact_site">
-
 							<input id="submit" type="submit" value="Send">
 						</form>
 					</div>
@@ -358,7 +348,15 @@
 			<!--end section-holder-->
 			<div class="google-map" data-latitude="-37.81677" data-longitude="144.964956" data-type="ROADMAP" data-zoom="16" data-pointer-title="Hey, We're Here!"></div>
 		</section>
-		<!--END CONTACTS-->
+		<!--END MENTOR CONTACTS-->
+
+
+
+
+
+
+
+		
 
 
 
