Added reveal for mentor data

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
         
         <script type="text/javascript">
             function revealData() {
-                document.getElementById('mentor-data-container').style.display = 'block';
+                document.getElementById('mentor_data_container').style.display = 'block';
             }
         </script>
 	</body>
