--- a/elements.html
+++ b/elements.html
@@ -190,7 +190,7 @@
 
 				<div id="gallery">
 					<div class="block full-width">
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper. Suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p> 
+						<p>MentorMe facilitates the introduction between high school students and real world mentors. Mentors meet up with students.</p> 
 						<br>
 					</div>
 					<ul class="block media-gallery-large">
