Content added in all sections, minor CSS adjustments

--- a/elements.html
+++ b/elements.html
@@ -202,7 +202,7 @@
 						</li>
 					</ul>
 					<br>
-					<blockquote class="block full-width">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper. Suscipit lobortis nisl ut aliquip ex ea commodo consequat.</blockquote>
+					<blockquote class="block full-width">It can be as simple as grabbing coffee and talking with someone who’s been exactly where you are. Ask questions about the industry you want to work in, what the average day on the job is like, all questions are worthwhile because you gain the perspective of a knowledgeable professional</blockquote>
 					<br>
 				</div>
 				<!-- end gallery -->
