--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
 				<div class="slider">
 					<ul class="slides">
 						<li>
-							<img src="resources/images/gallery/images/coffeeCups.jpg" alt="Mentor Mentee Coffee Cups">
-							<h1 class="caption" data-offset-top="130" data-offset-left="120" data-direction="left" >Welcome to MentorMe</h1>
-							<h4 class="caption" data-offset-top="248" data-offset-left="204">We are a small group of creatives who love what they do. </h4>
+							<img src="resources/images/gallery/images/mentor_mentee_2.jpg" alt="Slide 01">
+							<h1 class="caption" data-offset-top="130" data-offset-left="120" data-direction="left" >Establishing Mentorships </h1>
+							<h4 class="caption" data-offset-top="248" data-offset-left="204">Connecting you with experts in the industry to help you take the right steps for your future. </h4>
 						</li>
 						<li>
-							<img src="resources/images/gallery/images/mentor_mentee_2.jpg" alt="Slide 01">
-							<h1 class="caption" data-offset-top="130" data-offset-left="120" data-direction="left" >Providing Mentors </h1>
-							<h4 class="caption" data-offset-top="248" data-offset-left="204">We are a small group of creatives who love what they do. </h4>
+							<img src="resources/images/gallery/images/coffeeCups.jpg" alt="Mentor Mentee Coffee Cups">
+							<h1 class="caption" data-offset-top="130" data-offset-left="120" data-direction="left" >Welcome to MentorMe</h1>
+							<h4 class="caption" data-offset-top="248" data-offset-left="204">Foster a friendly rapport and really get to know someone to. </h4>
 						</li>
 					</ul>
 				</div>
@@ -243,7 +243,9 @@
 					</div>
 					<div class="block one-half">
 						<h4>So, what we actually do?</h4>
-						<p>MentorMe pairs each student with a mentor who is either working in a professional field or studying that field in college. Mentors are chosen based on their compatibility with the student’s academic interests and intended career paths. Mentors will converse with students and work closely to immerse them in their fields and give students true exposure to their futures.</p>
+						<p>MentorMe pairs each student with a mentor who is either working in a professional field or studying that field in college. Mentors are chosen based on their compatibility with the student’s academic interests and intended career paths.</p>
+						</br>
+						<p>Mentors will converse with students and work closely to immerse them in their fields and give students true exposure to their futures.</p>
 					</div>
 
 					<div class="block one-half last">
@@ -291,9 +293,7 @@
 
 					<div class="block one-half">
 						<div class="contacts-info">
-							<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-							<br>
-							<p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
+							<p>Can’t wait to get a mentor yourself? We’ll connect you with our group of professionals who are passionate about giving you a head start in your career planning. They are willing to spend their time with you, so what are you waiting for!</p>
 							<br>
 							<a class="social-icon" href="https://www.facebook.com/pages/Mentorme/465728076870190">
 								<img src="resources/images/social/facebook.png" alt="facebook"/>
@@ -323,8 +323,8 @@
 							<label for="email">Field of Interest*</label>
 							<input placeholder="Field of Interest*" id="foi" type="text" name="foi">
 
-							<label for="message">Any Additional Notes?*</label>
-							<textarea placeholder="Any Additional Notes?" id="message" name="message"></textarea>
+							<label for="message">Tell Us About Yourself*</label>
+							<textarea placeholder="Tell Us About Yourself" id="message" name="message"></textarea>
 
 							<input id="submit" type="submit" value="Send">
 						</form>
@@ -381,9 +381,6 @@
 						</li>
 						<li>
 							<a href="#contacts">Signup</a>
-						</li>
-						<li>
-							<a href="#works">Meetup 101</a>
 						</li>
 						<li>
 							<a href="#">Prospective Mentor?</a>
