Additions to CSS

--- a/index.html
+++ b/index.html
@@ -295,6 +295,8 @@
 						<div class="contacts-info">
 							<p>Can’t wait to get a mentor yourself? We’ll connect you with our group of professionals who are passionate about giving you a head start in your career planning. They are willing to spend their time with you, so what are you waiting for!</p>
 							<br>
+							<p>Feel free to follow us and stay up to date with our updates!</p>
+							<br>
 							<a class="social-icon" href="https://www.facebook.com/pages/Mentorme/465728076870190">
 								<img src="resources/images/social/facebook.png" alt="facebook"/>
 							</a>
