Added logo, CSS tweaks

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 <title>MentorMe</title>
+<link rel="icon" href="favicon.ico" type="image/x-icon" />
+
 <link rel="stylesheet" href="resources/css/flexslider.css" type="text/css" />
 <link rel="stylesheet" href="resources/css/style.css" type="text/css" />
 <link rel="stylesheet" href="resources/css/media-queries.css" type="text/css" media="all" />
@@ -51,9 +53,9 @@
 			<div class="header-container">
 				<div class="logo-container">
 					<a class="logo" href="#home" title="Home">
-						<img src="resources/images/logo.png" alt="ilone - Portfolio Template">
+						<img src="resources/images/mentortypography.png" alt="mentorme" width="100px">
 					</a>
-					<span>MentorMe</span>
+                    <span>MentorMe</span>
 				</div>
 				<!--end logo-container-->
 				<nav class="main-navigation">
