Frontend adjustments/logos

--- a/elements.html
+++ b/elements.html
@@ -202,7 +202,7 @@
 						</li>
 					</ul>
 					<br>
-					<blockquote class="block full-width">It can be as simple as grabbing coffee and talking with someone who’s been exactly where you are. Ask questions about the industry you want to work in, what the average day on the job is like, all questions are worthwhile because you gain the perspective of a knowledgeable professional</blockquote>
+					<blockquote class="block full-width">It can be as simple as grabbing coffee and talking with someone who’s been exactly where you are. Ask questions about the industry you want to work in, what the average day on the job is like, all questions are worthwhile because you gain the perspective of a knowledgeable professional.</blockquote>
 					<br>
 				</div>
 				<!-- end gallery -->
@@ -219,7 +219,7 @@
 				<div id="typography">
 					<div class="block one-half">
 						<h1>H1 Heading</h1>
-						<p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
+						<p>It can be as simple as grabbing coffee and talking with someone who’s been exactly where you are. Ask questions about the industry you want to work in, what the average day on the job is like, all questions are worthwhile because you gain the perspective of a knowledgeable professional.</p>
 						<br>
 						<h2>H2 Heading Example</h2>
 						<p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
