Tweaked index (for logo)

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<div class="header-container">
 				<div class="logo-container">
 					<a class="logo" href="#home" title="Home">
-						<img src="resources/images/mentortypography.png" alt="mentorme" width="100px">
+						<img src="resources/images/straighttypography.png" alt="mentorme" height="50px">
 					</a>
                     <span>MentorMe</span>
 				</div>
