--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 			<div class="section-holder">
 				<div class="heading">
 					<div id="scrole_to" style="margin-bottom:150px;"></div>
-					<h1>Mentee Data</h1>
+					<h1>Potential Mentors</h1>
 				</div>
 				<!--end heading-->
 				<div class="content" id="mentor_data">
